--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+# avoid node modules and cache files created by build tools
+cache
+node_modules
