--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "![Design preview for the Interactive pricing component coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/index.html -p<1000>",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.37.2"
+  }
 }
