--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "![Design preview for the Interactive pricing component coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html -p<1000>",
+    "clean": "rmdir dist",
+    "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.37.2"
   }
